--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <body>
 
   <div class="overlay">
-    <h1>Кофей от Марата</h1>
+    <h1>Кофейня от Марата</h1>
     <p>Насладитесь насыщенным вкусом кофе — выберите напиток и получите его от нашего бариста Марата!</p>
 
     <button class="button" onclick="showCoffeeOptions()">Заказать кофе</button>
